--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # Discord
 # || ==============================================||
 DISCORD_TOKEN=""
-DISCORD_CLIENT_ID=""
+DISCORD_APP_ID=""
 SERVER_ID=""
 DISCORD_CLIENT_SECRET=""
 # || ==============================================||
