--- a/package.json
+++ b/package.json
@@ -5,12 +5,18 @@
   "scripts": {
     "start": "node build/index.js",
     "build": "tsc",
-    "dev": "concurrently \"tsc -w\" \"nodemon build/index.js\""
+    "dev": "concurrently \"tsc -w\" \"nodemon build/index.js\"",
+    "deploy:commands": "tsc && node build/deploy-commands.js"
   },
   "devDependencies": {
     "@types/bun": "latest",
     "@types/node": "^20.14.2",
     "concurrently": "^8.2.2",
+    "eslint": "^8",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-prettier": "^5.1.3",
     "nodemon": "^3.1.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.0.0"
@@ -19,6 +25,7 @@
     "node": ">=20.10.0"
   },
   "dependencies": {
+    "@discordjs/rest": "^2.3.0",
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5",
     "zod": "^3.23.8"
