--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
   },
   "dependencies": {
     "@discordjs/rest": "^2.3.0",
+    "@prisma/client": "5.15.1",
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5",
+    "prisma": "^5.15.1",
     "zod": "^3.23.8"
   }
 }
