feat: add top tracks fetch and refresh token

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,19 @@ DISCORD_APP_ID=""
 SERVER_ID=""
 DISCORD_CLIENT_SECRET=""
 # || ==============================================||
+# Supabase
+# || ==============================================||
+DATABASE_URL=""
+DIRECT_URL=""
+# || ==============================================||
+# Spotify
+# || ==============================================||
+SPOTIFY_CLIENT=""
+SPOTIFY_CLIENT_SECRET=""
+SPOTIFY_REDIRECT_URI=""
+# || ==============================================||
+#Discortify
+# || ==============================================||
+DISCORTIFY_API_URL=""
+DISCORTIFY_API_KEY=""
+# || ==============================================||
