--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "module": "index.ts",
   "main": "src/index.ts",
   "scripts": {
-    "start": "node build/index.js",
+    "start": "node -r module-alias/register build/index.js",
     "build": "tsc",
-    "dev": "concurrently \"tsc -w\" \"nodemon build/index.js\"",
-    "deploy:commands": "tsc && node build/deploy-commands.js"
+    "dev": "concurrently \"tsc -w\" \"nodemon -r module-alias/register build/index.js\"",
+    "deploy:commands": "tsc && node -r module-alias/register build/deploy-commands.js"
   },
   "devDependencies": {
     "@types/bun": "latest",
     "@types/node": "^20.14.2",
+    "@types/spotify-api": "^0.0.25",
     "concurrently": "^8.2.2",
     "eslint": "^8",
     "eslint-config-prettier": "^9.1.0",
@@ -19,17 +20,28 @@
     "eslint-plugin-prettier": "^5.1.3",
     "nodemon": "^3.1.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.0.0"
+    "typescript": "^5.5.2"
   },
   "engines": {
     "node": ">=20.10.0"
   },
   "dependencies": {
+    "@discord-player/extractor": "^4.4.7",
     "@discordjs/rest": "^2.3.0",
+    "@discordjs/voice": "^0.17.0",
     "@prisma/client": "5.15.1",
+    "discord-player": "^6.6.10",
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5",
+    "ffmpeg-static": "^5.2.0",
+    "mediaplex": "^0.0.9",
+    "module-alias": "^2.2.3",
     "prisma": "^5.15.1",
+    "query-string": "^9.0.0",
+    "youtube-ext": "^1.1.25",
     "zod": "^3.23.8"
+  },
+  "_moduleAliases": {
+    "@": "build"
   }
 }
