--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "start": "node -r module-alias/register build/index.js",
     "build": "tsc",
     "dev": "concurrently \"tsc -w\" \"nodemon -r module-alias/register build/index.js\"",
-    "deploy:commands": "tsc && node -r module-alias/register build/deploy-commands.js",
     "download:secrets": "doppler secrets download --project=personal-discortify-bot --config=dev --no-file --format=env > .env"
   },
   "devDependencies": {
@@ -31,6 +30,8 @@
     "@discordjs/rest": "^2.3.0",
     "@discordjs/voice": "^0.17.0",
     "@prisma/client": "5.15.1",
+    "commandkit": "^0.1.10",
+    "date-fns": "^3.6.0",
     "discord-player": "^6.6.10",
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5",
