--- a/package.json
+++ b/package.json
@@ -1,54 +1,53 @@
 {
-  "name": "support-discord-bot",
-  "module": "index.ts",
-  "main": "src/index.ts",
-  "scripts": {
-    "start": "node -r module-alias/register build/index.js",
-    "build": "tsc",
-    "dev": "concurrently \"tsc -w\" \"nodemon -r module-alias/register build/index.js\"",
-    "download:secrets": "doppler secrets download --project=personal-discortify-bot --config=dev --no-file --format=env > .env"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "1.8.3",
-    "@types/bun": "latest",
-    "@types/node": "^20.14.2",
-    "@types/spotify-api": "^0.0.25",
-    "concurrently": "^8.2.2",
-    "eslint": "^8",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prefer-arrow": "^1.2.3",
-    "eslint-plugin-prettier": "^5.1.3",
-    "nodemon": "^3.1.3",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.5.2"
-  },
-  "engines": {
-    "node": ">=20.10.0"
-  },
-  "dependencies": {
-    "@discord-player/extractor": "^4.4.7",
-    "@discordjs/rest": "^2.3.0",
-    "@discordjs/voice": "^0.17.0",
-    "@prisma/client": "5.15.1",
-    "commandkit": "^0.1.10",
-    "date-fns": "^3.6.0",
-    "discord-player": "^6.6.10",
-    "discord.js": "^14.15.3",
-    "dotenv": "^16.4.5",
-    "ffmpeg-static": "^5.2.0",
-    "mediaplex": "^0.0.9",
-    "module-alias": "^2.2.3",
-    "numbro": "^2.5.0",
-    "prisma": "^5.15.1",
-    "query-string": "^9.0.0",
-    "youtube-ext": "^1.1.25",
-    "zod": "^3.23.8"
-  },
-  "_moduleAliases": {
-    "@": "build"
-  },
-  "prisma": {
-    "schema": "src/lib/db/schema.prisma"
-  }
+	"name": "support-discord-bot",
+	"module": "index.ts",
+	"main": "src/index.ts",
+	"scripts": {
+		"start": "node -r module-alias/register build/index.js",
+		"build": "tsc",
+		"dev": "concurrently \"tsc -w\" \"nodemon -r module-alias/register build/index.js\"",
+		"download:secrets": "doppler secrets download --project=personal-discortify-bot --config=dev --no-file --format=env > .env",
+		"commit": "git-cz",
+		"release": "commit-and-tag-version"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "1.8.3",
+		"@types/bun": "latest",
+		"@types/node": "^20.14.2",
+		"@types/spotify-api": "^0.0.25",
+		"commit-and-tag-version": "12.4.1",
+		"commitizen": "4.3.0",
+		"concurrently": "^8.2.2",
+		"cz-conventional-changelog": "3.3.0",
+		"nodemon": "^3.1.3",
+		"ts-node": "^10.9.2",
+		"typescript": "^5.5.2"
+	},
+	"engines": {
+		"node": ">=20.10.0"
+	},
+	"dependencies": {
+		"@discordjs/rest": "^2.3.0",
+		"@prisma/client": "5.15.1",
+		"commandkit": "^0.1.10",
+		"date-fns": "^3.6.0",
+		"discord.js": "^14.15.3",
+		"dotenv": "^16.4.5",
+		"module-alias": "^2.2.3",
+		"numbro": "^2.5.0",
+		"prisma": "^5.15.1",
+		"query-string": "^9.0.0",
+		"zod": "^3.23.8"
+	},
+	"_moduleAliases": {
+		"@": "build"
+	},
+	"prisma": {
+		"schema": "src/lib/db/schema.prisma"
+	},
+	"config": {
+		"commitizen": {
+			"path": "./node_modules/cz-conventional-changelog"
+		}
+	}
 }
